--- a/index.html
+++ b/index.html
@@ -88,27 +88,11 @@
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeEuouSe19a8QisUrBYrIzNyYgzEYtBkEa1-u6n9a1d7Ywtog/viewform?embedded=true" width="640" height="770" frameborder="0" marginheight="0" marginwidth="0">Hang in there!</iframe>
     </section>
 
+    <!-- ===== Contact Section ===== -->
     <section id="contact">
-        <h2 class="section-heading" style="font-size: 20px;">Any queries? Or do you want to catch up some time? Leave a message here!</h2>
-        <form action="mailto: srinijadharani001@gmail.com" enctype="text/plain">
-            <div>
-                <label class="labels" for="name">Name:
-                <input class="input-labels" type="text" name="name" id="name" placeholder="Enter your name here" />
-              </label>
-            </div>
-            <div>
-                <label class="labels" for="email">Email:
-                <input class="input-labels" type="text" name="email" id="email" placeholder="Enter your email address here" />
-              </label>
-            </div>
-            <div>
-                <label class="labels">Please provide your feedback here: </label>
-                <br>
-                <textarea name="comments" rows="3" cols="40"></textarea>
-            </div>
-            <input type="submit" value="Submit">
-            <input type="reset">
-        </form>
+        <h2 class="section-heading" style="font-size: 24px;">Any queries? Or do you want to catch up some time? Leave a message here!</h2>
+        <p class="contact-para">Please fill out this quick form and we will be in touch with lightening speed!⚡</p>
+
     </section>
 </body>
 <script src="index.js"></script>
