--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- ===== CSS stylesheets ===== -->
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">s
 
     <!-- ===== Bootstrap CDN ===== -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -20,6 +21,7 @@
     <!-- ===== Google Fonts ===== -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <!-- Montserrat -->
+
 
 </head>
 
@@ -58,6 +60,14 @@
                 </ul>
             </div>
         </nav>
+
+        <!-- ===== FLOATING SOCIAL MEDIA ====== -->
+        <div class="icons">
+            <a href="https://www.youtube.com/channel/UCxj2zcxoGukU5KXGY9O5gEg" class="youtube"><img class="f youtube" src="media/youtube.png" alt="">youtube </a>
+            <a href="https://www.instagram.com/speakingclub_gitam/" class="instagram"><img class="f instagram" src="media/instagram.png" alt="">instagram </a>
+            <a href="https://www.linkedin.com/company/speaking-club-gitam-bengaluru/" class="linkedin"><img class="f linkedin" src="media/linkedin.png" alt="">linkedin </a>
+        </div>
+
     </section>
 
     <section id="home">
@@ -79,7 +89,7 @@
         <div class="video-div">
             <iframe class="video" width="650" height="450" src="https://www.youtube.com/embed/al7U0F8XXS0">
         </iframe>
-            <p class="about-para">Do you want to improve your interpersonal skills and practice public speaking? You've come to the right place! Speaking Club helps learners of all levels improve their communication skills. <br><b><em>Come join us and master public speaking!</em></b></p>
+            <p class="about-para">Do you want to improve your interpersonal skills and practice public speaking? You've come to the right place! Speaking Club helps learners of all levels improve their communication skills. <br><b>Come join us and master public speaking!</b></p>
         </div>
     </section>
     <section id="register">
