--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 <body>
 
+    <!-- ===== NAVIGATION BAR NAVBAR SECTION ===== -->
     <section id="navigation">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <a class="navbar-brand" href=" # "><img class="logo " src="media/logo_sc.png " alt=" "></a>
@@ -43,7 +44,7 @@
                         <a class="nav-link" href="#about">About us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Community</a>
+                        <a class="nav-link" href="#community">Community</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Events/Competitions</a>
@@ -61,29 +62,23 @@
             </div>
         </nav>
 
-        <!-- ===== FLOATING SOCIAL MEDIA ====== -->
+        <!-- === FLOATING SOCIAL MEDIA === -->
         <div class="icons">
             <a href="https://www.youtube.com/channel/UCxj2zcxoGukU5KXGY9O5gEg" class="youtube"><img class="f youtube" src="media/youtube.png" alt="">youtube </a>
             <a href="https://www.instagram.com/speakingclub_gitam/" class="instagram"><img class="f instagram" src="media/instagram.png" alt="">instagram </a>
             <a href="https://www.linkedin.com/company/speaking-club-gitam-bengaluru/" class="linkedin"><img class="f linkedin" src="media/linkedin.png" alt="">linkedin </a>
         </div>
-
     </section>
 
+    <!-- ===== HOME SECTION ===== -->
     <section id="home">
         <h1 class="heading">Speaking Club</h1>
-
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script> -->
-
-        <h3 class="tagline">
-            <span class="letters" style="margin-top:0px;">Public Speaking: What people fear, we do for fun!</span>
-        </h3>
-
+        <h3 class="tagline"><span class="letters" style="margin-top:0px;">Public Speaking: What people fear, we do for fun!</span></h3>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
         <img class="home-img" src="media/speaker.png" alt="">
     </section>
 
-
+    <!-- ===== ABOUT SECTION ===== -->
     <section id="about">
         <h2 class="section-heading">About us</h2>
         <div class="video-div">
@@ -92,18 +87,162 @@
             <p class="about-para">Do you want to improve your interpersonal skills and practice public speaking? You've come to the right place! Speaking Club helps learners of all levels improve their communication skills. <br><b>Come join us and master public speaking!</b></p>
         </div>
     </section>
+
+    <!-- ===== COMMUNITY SECTION ===== -->
+    <section id="community">
+        <h2 class="section-heading">Community</h2>
+
+        <div class="container">
+            <!-- NIHANTH -->
+            <div class="box">
+                <div class="imgBox">
+                    <img src="media/comm/nihanth1.jpg" alt="">
+                </div>
+                <div class="details">
+                    <div class="content">
+                        <h3>Nihanth</h3>
+                        <p>Governing Body Member</p>
+                    </div>
+                </div>
+            </div>
+            <!-- DEEPAK -->
+            <div class="box">
+                <div class="imgBox">
+                    <img src="media/comm/deepak1.jpg" alt="">
+                </div>
+                <div class="details">
+                    <div class="content">
+                        <h3>Deepak</h3>
+                        <p>Governing Body Member</p>
+                    </div>
+                </div>
+            </div>
+            <!-- SINDHU -->
+            <div class="box">
+                <div class="imgBox">
+                    <img src="media/comm/sindhu1.jpg" alt="">
+                </div>
+                <div class="details">
+                    <div class="content">
+                        <h3>Sindhu</h3>
+                        <p>Governing Body Member</p>
+                    </div>
+                </div>
+            </div>
+            <!-- SRAVAN -->
+            <div class="box">
+                <div class="imgBox">
+                    <img src="media/comm/sravan1.jpg" alt="">
+                </div>
+                <div class="details">
+                    <div class="content">
+                        <h3>Sravan</h3>
+                        <p>Governing Body Member</p>
+                    </div>
+                </div>
+            </div>
+            <!-- JATHIN -->
+            <div class="box">
+                <div class="imgBox">
+                    <img src="media/comm/jathin1.jpeg" alt="">
+                </div>
+                <div class="details">
+                    <div class="content">
+                        <h3>Jathin</h3>
+                        <p>Member of the Execution Team</p>
+                    </div>
+                </div>
+            </div>
+            <!-- NANDA -->
+            <div class="box">
+                <div class="imgBox">
+                    <img src="media/comm/nanda1.jpeg" alt="">
+                </div>
+                <div class="details">
+                    <div class="content">
+                        <h3>Nanda</h3>
+                        <p>Member of the Execution Team</p>
+                    </div>
+                </div>
+            </div>
+            <!-- LAYA -->
+            <div class="box">
+                <div class="imgBox">
+                    <img src="media/comm/laya1.jpeg" alt="">
+                </div>
+                <div class="details">
+                    <div class="content">
+                        <h3>Laya</h3>
+                        <p>Member of the Execution Team</p>
+                    </div>
+                </div>
+            </div>
+            <!-- SATHVIKA -->
+            <div class="box">
+                <div class="imgBox">
+                    <img src="media/comm/sathvika1.jpeg" alt="">
+                </div>
+                <div class="details">
+                    <div class="content">
+                        <h3>Sathvika</h3>
+                        <p>Member of the Execution Team</p>
+                    </div>
+                </div>
+            </div>
+            <!-- JEEVAN -->
+            <div class="box">
+                <div class="imgBox">
+                    <img src="media/comm/jeevan1.jpeg" alt="">
+                </div>
+                <div class="details">
+                    <div class="content">
+                        <h3>Jeevan</h3>
+                        <p>Member of the Execution Team</p>
+                    </div>
+                </div>
+            </div>
+            <!-- SREEYA -->
+            <div class="box">
+                <div class="imgBox">
+                    <img src="media/comm/sreeya1.jpg" alt="">
+                </div>
+                <div class="details">
+                    <div class="content">
+                        <h3>Sreeya</h3>
+                        <p>Member of the Execution Team</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- SRINIJA -->
+            <div class="box">
+                <div class="imgBox">
+                    <img src="media/comm/srinija1.jpeg" alt="">
+                </div>
+                <div class="details">
+                    <div class="content">
+                        <h3>Srinija</h3>
+                        <p>Member of the Execution Team</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- ===== REGISTER SECTION ===== -->
     <section id="register">
         <h2 class="section-heading">Join us here!</h2>
-        <!-- ====== GOOGLE FORMS ====== -->
+        <!-- ====== Google Form ====== -->
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeEuouSe19a8QisUrBYrIzNyYgzEYtBkEa1-u6n9a1d7Ywtog/viewform?embedded=true" width="640" height="770" frameborder="0" marginheight="0" marginwidth="0">Hang in there!</iframe>
     </section>
 
-    <!-- ===== Contact Section ===== -->
+    <!-- ===== CONTACT SECTION ===== -->
     <section id="contact">
         <h2 class="section-heading" style="font-size: 24px;">Any queries? Or do you want to catch up some time? Leave a message here!</h2>
         <p class="contact-para">Please fill out this quick form and we will be in touch with lightening speed!⚡</p>
-
     </section>
+
 </body>
 <script src="index.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
