--- a/index.html
+++ b/index.html
@@ -239,8 +239,37 @@
 
     <!-- ===== CONTACT SECTION ===== -->
     <section id="contact">
-        <h2 class="section-heading" style="font-size: 24px;">Any queries? Or do you want to catch up some time? Leave a message here!</h2>
-        <p class="contact-para">Please fill out this quick form and we will be in touch with lightening speed!⚡</p>
+        <span id="hs_cos_wrapper_module_147680614068526149" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_raw_html" style="" data-hs-cos-general-type="widget" data-hs-cos-type="raw_html"><div class="contact-section-wrapper hs-page-width-normal">
+            <div class="contact-box-wrapper">
+            <div class="contact-box">
+             <img class="contact-box-item logo" src="https://www.hubspot.com/hubfs/Contact%20Us/phone.svg">
+            <span class="contact-box-item title">Talk to us!</span>
+            <span class="contact-box-item blurb">Interested to know more about the club? Talk to us!</span>
+            <span class="contact-box-item number">
+            <span>Srinija : +917013811599</span>
+            <span> Nanda : +918431822071</span>
+            <span>Jeevan : +919206936735</span>
+            <span class="hsg-nav__link-label hsg-nav__link-label--phone">
+        </span>
+            </a>
+            <noscript>
+            <a href="tel:+18578295060" class="hsg-nav__link">
+            <span class="hsg-nav__link-label hsg-nav__link-label--phone">
+            <span>+1 857 829 5060</span>
+            </span>
+            </a>
+            </noscript>
+            </span>
+            <a class="contact-box-item link" href="#contact-numbers-section">W</a>
+            </div>
+            <div class="contact-box">
+            <img class="contact-box-item logo" src="https://www.hubspot.com/hubfs/Contact%20Us/chat.svg">
+            <span class="contact-box-item title">E-mail Support</span>
+            <span class="contact-box-item blurb">Or would you rather reach to us by email?</span>
+            <a class="cta cta--blue contact-sales" href="mailto:scgubangalore@gmail.com">Mail us!</a>
+            </div>
+            </div>
+            </div></span>
     </section>
 
 </body>
