--- a/index.html
+++ b/index.html
@@ -91,139 +91,141 @@
 
     <!-- ===== COMMUNITY SECTION ===== -->
     <section id="community">
-        <h2 class="section-heading">Community</h2>
+        <div class="comm-div">
+            <h2 class="section-heading">Community</h2>
 
-        <div class="container">
-            <!-- NIHANTH -->
-            <div class="box">
-                <div class="imgBox">
-                    <img src="media/comm/nihanth1.jpg" alt="">
-                </div>
-                <div class="details">
-                    <div class="content">
-                        <h3>Nihanth</h3>
-                        <p>Governing Body Member</p>
+            <div class="container">
+                <!-- NIHANTH -->
+                <div class="box">
+                    <div class="imgBox">
+                        <img src="media/comm/nihanth1.jpg" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="content">
+                            <h3>Nihanth</h3>
+                            <p>Governing Body Member</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- DEEPAK -->
-            <div class="box">
-                <div class="imgBox">
-                    <img src="media/comm/deepak1.jpg" alt="">
-                </div>
-                <div class="details">
-                    <div class="content">
-                        <h3>Deepak</h3>
-                        <p>Governing Body Member</p>
+                <!-- DEEPAK -->
+                <div class="box">
+                    <div class="imgBox">
+                        <img src="media/comm/deepak1.jpg" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="content">
+                            <h3>Deepak</h3>
+                            <p>Governing Body Member</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- SINDHU -->
-            <div class="box">
-                <div class="imgBox">
-                    <img src="media/comm/sindhu1.jpg" alt="">
-                </div>
-                <div class="details">
-                    <div class="content">
-                        <h3>Sindhu</h3>
-                        <p>Governing Body Member</p>
+                <!-- SINDHU -->
+                <div class="box">
+                    <div class="imgBox">
+                        <img src="media/comm/sindhu1.jpg" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="content">
+                            <h3>Sindhu</h3>
+                            <p>Governing Body Member</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- SRAVAN -->
-            <div class="box">
-                <div class="imgBox">
-                    <img src="media/comm/sravan1.jpg" alt="">
-                </div>
-                <div class="details">
-                    <div class="content">
-                        <h3>Sravan</h3>
-                        <p>Governing Body Member</p>
+                <!-- SRAVAN -->
+                <div class="box">
+                    <div class="imgBox">
+                        <img src="media/comm/sravan1.jpg" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="content">
+                            <h3>Sravan</h3>
+                            <p>Governing Body Member</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- JATHIN -->
-            <div class="box">
-                <div class="imgBox">
-                    <img src="media/comm/jathin1.jpeg" alt="">
-                </div>
-                <div class="details">
-                    <div class="content">
-                        <h3>Jathin</h3>
-                        <p>Member of the Execution Team</p>
+                <!-- JATHIN -->
+                <div class="box">
+                    <div class="imgBox">
+                        <img src="media/comm/jathin1.jpeg" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="content">
+                            <h3>Jathin</h3>
+                            <p>Member of the Execution Team</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- NANDA -->
-            <div class="box">
-                <div class="imgBox">
-                    <img src="media/comm/nanda1.jpeg" alt="">
-                </div>
-                <div class="details">
-                    <div class="content">
-                        <h3>Nanda</h3>
-                        <p>Member of the Execution Team</p>
+                <!-- NANDA -->
+                <div class="box">
+                    <div class="imgBox">
+                        <img src="media/comm/nanda1.jpeg" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="content">
+                            <h3>Nanda</h3>
+                            <p>Member of the Execution Team</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- LAYA -->
-            <div class="box">
-                <div class="imgBox">
-                    <img src="media/comm/laya1.jpeg" alt="">
-                </div>
-                <div class="details">
-                    <div class="content">
-                        <h3>Laya</h3>
-                        <p>Member of the Execution Team</p>
+                <!-- LAYA -->
+                <div class="box">
+                    <div class="imgBox">
+                        <img src="media/comm/laya1.jpeg" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="content">
+                            <h3>Laya</h3>
+                            <p>Member of the Execution Team</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- SATHVIKA -->
-            <div class="box">
-                <div class="imgBox">
-                    <img src="media/comm/sathvika1.jpeg" alt="">
-                </div>
-                <div class="details">
-                    <div class="content">
-                        <h3>Sathvika</h3>
-                        <p>Member of the Execution Team</p>
+                <!-- SATHVIKA -->
+                <div class="box">
+                    <div class="imgBox">
+                        <img src="media/comm/sathvika1.jpeg" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="content">
+                            <h3>Sathvika</h3>
+                            <p>Member of the Execution Team</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- JEEVAN -->
-            <div class="box">
-                <div class="imgBox">
-                    <img src="media/comm/jeevan1.jpeg" alt="">
-                </div>
-                <div class="details">
-                    <div class="content">
-                        <h3>Jeevan</h3>
-                        <p>Member of the Execution Team</p>
+                <!-- JEEVAN -->
+                <div class="box">
+                    <div class="imgBox">
+                        <img src="media/comm/jeevan1.jpeg" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="content">
+                            <h3>Jeevan</h3>
+                            <p>Member of the Execution Team</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- SREEYA -->
-            <div class="box">
-                <div class="imgBox">
-                    <img src="media/comm/sreeya1.jpg" alt="">
-                </div>
-                <div class="details">
-                    <div class="content">
-                        <h3>Sreeya</h3>
-                        <p>Member of the Execution Team</p>
+                <!-- SREEYA -->
+                <div class="box">
+                    <div class="imgBox">
+                        <img src="media/comm/sreeya1.jpg" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="content">
+                            <h3>Sreeya</h3>
+                            <p>Member of the Execution Team</p>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <!-- SRINIJA -->
-            <div class="box">
-                <div class="imgBox">
-                    <img src="media/comm/srinija1.jpeg" alt="">
-                </div>
-                <div class="details">
-                    <div class="content">
-                        <h3>Srinija</h3>
-                        <p>Member of the Execution Team</p>
+                <!-- SRINIJA -->
+                <div class="box">
+                    <div class="imgBox">
+                        <img src="media/comm/srinija1.jpeg" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="content">
+                            <h3>Srinija</h3>
+                            <p>Member of the Execution Team</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -289,14 +291,14 @@
     <section id="register">
         <h2 class="section-heading">Join us here!</h2>
         <!-- ====== Google Form ====== -->
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeEuouSe19a8QisUrBYrIzNyYgzEYtBkEa1-u6n9a1d7Ywtog/viewform?embedded=true" width="640" height="770" frameborder="0" marginheight="0" marginwidth="0">Hang in there!</iframe>
+        <iframe class="reg-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSeEuouSe19a8QisUrBYrIzNyYgzEYtBkEa1-u6n9a1d7Ywtog/viewform?embedded=true" width="640" height="770" frameborder="0" marginheight="0" marginwidth="0">Hang in there!</iframe>
     </section>
 
     <!-- ===== CONTACT SECTION ===== -->
     <section id="contact">
         <div id="hs_cos_wrapper_module_147680614068526149" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_raw_html" data-hs-cos-general-type="widget" data-hs-cos-type="raw_html">
             <div class="contact-section-wrapper hs-page-width-normal">
-                <h2 class='contact-us'>CONTACT US!</h2>
+                <h2 class='section-heading'>Contact us</h2>
                 <div class="contact-box-wrapper">
 
                     <div class="contact-box-1">
@@ -342,7 +344,7 @@
 
     <!-- ===== FOOTER ===== -->
     <footer>
-        <p>© Copyright 2020, All Rights Reserved Speaking Club - GITAM</p>
+        <p>© 2020 All Rights Reserved Speaking Club - GITAM Bengaluru</p>
     </footer>
 
 </body>
